ReStyles navbar UI and HomePage

--- a/partials/home-view.html
+++ b/partials/home-view.html
@@ -5,7 +5,11 @@
             <a ng-href="#!/list">Parks</a>
         </div>
         <div class="home_container-boxes campsite-box">
-            <a ng-href="#!/home">Search</a>
+            <a ng-href="#!/home">Search<br>
+                <!-- Temporary p tag while feature is built -->
+                <p style="font-size: 10px; margin: 0; padding: 0; color: white; background-color: teal;">(Coming Soon)</p>
+            </a>
+            
         </div>
     </div>
 </div>
