--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavCtrl">
-    <nav ng-class="{'nav-test': tallNav}" style="background: url(https://www.go4travelblog.com/wp-content/uploads/2016/01/Great-Smoky-Mountains-National-Park.jpg) no-repeat center center; background-size: cover;"
+    <nav ng-class="{'nav-test': tallNav}" style="background: url(http://www.mountainaircabinrentals.com/wp-content/uploads/2015/11/gatlinburg-cabins2.jpg) no-repeat center center; background-size: cover;"
         class="navbar navbar-default" ng-controller="NavCtrl">
         <div class="nav-flex">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -11,6 +11,8 @@
                     <li><a class="nav-item" href="#!/campsite_view">Campsites</a></li>
                     <li><a class="nav-item" href="#!/logout">Logout</a></li>
                 </ul>
+
+                <h4 ng-show="tallNav==true" class="nav-banner">Find Your Trail</h4>
                 <!-- <ul class="side-nav" id="mobile-demo" ng-if="user.uid">
                     <li><a class="nav-item" href="#!/list">Parks</a></li>
                     <li><a class="nav-item" href="#!/campsite_view">Campsites</a></li>
