--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,14 @@ nav {
   justify-content: space-around;
   align-content: center; }
 
+.nav-banner {
+  text-align: center;
+  position: absolute;
+  top: 400px;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(31, 68, 95, 0.54); }
+
 .trek-logo {
   font-size: 3rem !important;
   font-family: 'Rubik Mono One', sans-serif;
@@ -44,7 +52,7 @@ nav {
   margin-top: 1.5%; }
 
 .nav-item {
-  color: white !important;
+  color: #1F445F !important;
   font-family: 'Rubik Mono One', sans-serif;
   flex-grow: 1; }
 
@@ -87,11 +95,11 @@ nav {
   padding: 10px;
   min-height: 100%; }
   .home-container .park-box {
-    background: url(http://i2.cdn.cnn.com/cnnnext/dam/assets/160129105442-nationalparks-1-super-169.jpg) no-repeat center center;
+    background: url(http://d3ne5s9fv9p81l.cloudfront.net/48/96/22f/47a/3bfea62751652abe5f9a3b.jpg) no-repeat center center;
     background-size: cover; }
     .home-container .park-box a {
       font-family: 'Rubik Mono One', sans-serif;
-      color: #1F445F; }
+      color: white; }
   .home-container .campsite-box {
     background: url(https://images.theoutbound.com/uploads/1437140402255/wumsmrfw78e/ca76c0961beec40ee34c0e8b7997e543?w=900&h=600&fit=crop) no-repeat center center;
     background-size: cover; }
@@ -170,13 +178,11 @@ nav {
     min-width: 100%;
     min-height: 100%; }
 
-.card-title-themed {
+.card-title-themed a {
   background-color: #1F445F;
-  color: white !important;
   padding: 7px !important;
-  font-family: 'Rubik Mono One', sans-serif; }
-  .card-title-themed a {
-    color: white !important; }
+  font-family: 'Rubik Mono One', sans-serif;
+  color: white !important; }
 
 .add-park,
 .add-campsite {
@@ -489,8 +495,9 @@ nav {
   margin: 25px 0px; }
 
 .uploadedImage {
-  height: 140px;
-  width: auto; }
+  min-height: 100%;
+  width: 100%;
+  background-size: cover; }
 
 .campsite-bgr {
   height: 300px; }
@@ -500,7 +507,7 @@ nav {
   padding: 0; }
 
 .nav-test {
-  height: 400px; }
+  height: 600px; }
 
 #map {
   min-height: 200px;
