--- a/public/partials/login-view.html
+++ b/public/partials/login-view.html
@@ -1,13 +1,16 @@
 <div class="bgr-box-home home-container col-xs-4 col-xs-offset-4">
     <div class="login-box_left">
         <div class="login-input-wrapper">
-            <input type="email" class="form-control form-spacing" placeholder="Email Address" ng-model="auth.email" required autofocus>
-            <input type="password" class="form-control form-spacing" placeholder="Password" ng-model="auth.password" required>
-            <input type="text" class="form-control form-spacing" placeholder="Username" ng-model="auth.username" required>
+            <input type="email" class="" placeholder="Email Address" ng-model="auth.email" required autofocus>
+            <input type="password" class="" placeholder="Password" ng-model="auth.password" required>
+            <input type="text" class="" placeholder="Username" ng-model="auth.username" required>
         </div>
-        <a class="btn" ng-click="loginUser()">Login</a>
-        <a class="btn" ng-click="registerUser()">Register</a>
+        <div class="auth-btn">
+            <a class="btn" ng-click="loginUser()">Login</a>
+            <a class="btn" ng-click="registerUser()">Register</a>
+        </div>
     </div>
+
     <div class="login-box_right home_container-boxes">
         <p></p>
     </div>
