--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  padding-bottom: -20px; }
+  background-color: #1F445F; }
 
 nav {
   height: 150px;
@@ -19,14 +19,35 @@ nav {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
-  height: 400px;
+  height: 500px;
   width: 100%;
   padding: 20px;
   margin-top: 7%;
   background-color: rgba(31, 68, 95, 0.54); }
+  .nav-banner > * {
+    margin: 20px;
+    padding: 30px; }
   .nav-banner_text {
-    height: 200px;
-    padding: 45px; }
+    height: auto;
+    text-align: left;
+    color: white; }
+    .nav-banner_text p {
+      max-width: 350px;
+      line-height: 160%; }
+
+.nav-banner-auth {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr; }
+  .nav-banner-auth .auth-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+  .nav-banner-auth a {
+    color: #312F2F;
+    background-color: #FFB81C;
+    width: 50%;
+    margin: 10px; }
 
 .nav-banner-login {
   text-align: center;
@@ -84,22 +105,8 @@ nav {
     padding: 5px;
     color: white !important; } }
 
-.login-box_left {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  padding: 55px; }
-  .login-box_left .auth-btn {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; }
-  .login-box_left a {
-    color: #FFB81C;
-    width: 50%;
-    margin: 10px; }
-
 .login-input-wrapper {
-  background-color: rgba(31, 68, 95, 0.54);
+  background-color: rgba(31, 68, 95, 0.84);
   padding: 15px; }
   .login-input-wrapper input {
     padding: 10px;
